--- a/wsd_part1/krctran.sty
+++ b/wsd_part1/krctran.sty
@@ -21,7 +21,7 @@
 \RequirePackage{array} % таблицы
 %\RequirePackage{theorem} % теоремоподобные окружения
 \RequirePackage[all]{xy} % для рисования xy-pict
-\RequirePackage{graphicx}
+%\RequirePackage{graphicx}
 \RequirePackage[a4paper,twoside,hmargin={21.5mm,21.5mm},vmargin={25mm,29mm}]{geometry}
 \RequirePackage{multicol} % для печати в две колонки и динамического переключения
 \RequirePackage{float} % для поддержки печати рисунков сквозь все колонки
